Solved layout issue on smallest devices. Removed unneeded files and code.

--- a/src/styles/footer.sass
+++ b/src/styles/footer.sass
@@ -58,6 +58,14 @@ footer
       svg
         height: 1.8rem
 
+@media #{$mq414}
+  footer
+    .ctr-logo svg
+      height: 2.7rem
+    
+    .social
+      min-width: 3.2rem
+
 
 
 // Back to top button
