--- a/src/styles/header.sass
+++ b/src/styles/header.sass
@@ -24,9 +24,10 @@ header
     opacity: 0.5
 
   .heroTxt
-    color: $l2
     position: relative
     z-index: 20
+    margin: 1rem
+    color: $l2
 
   h1
     margin-bottom: 2rem
@@ -60,43 +61,35 @@ header
     .heroImg
       background-image: url("./../img/hero@1100.jpg")
 
-@media #{$mq960}
-  header
-    .heroImg
-      background-image: url("./../img/hero@1100.jpg")
-
 @media #{$mq768}
   header
     height: 100vh
-    .heroImg
-      background-image: url("./../img/hero@1100.jpg")
+
     h1
       font-size: 11.552rem
       line-height: 10rem
       margin: 0 0 2rem
+
     h5
       font-size: 3.3rem
       line-height: 4rem
     
-
 @media #{$mq568}
   header
-    .heroImg
-      background-image: url("./../img/hero@1100.jpg")
     h1
       font-size: 9.552rem
       line-height: 8.2rem
       margin: 0 0 1.8rem
+
     h5
       font-size: 2.8rem
 
 @media #{$mq414}
   header
-    .heroImg
-      background-image: url("./../img/hero@1100.jpg")
     h1
       font-size: 7.552rem
       line-height: 6.7rem
+
     h5
       font-size: 2.6rem
       line-height: 3rem
