--- a/src/styles/projectGlobals.sass
+++ b/src/styles/projectGlobals.sass
@@ -44,6 +44,27 @@ p
   color: darken($p1, 6%)
 
 
+@media #{$mq768}
+  h2
+    font-size: 5.96rem
+    line-height: 5.96rem
+    margin: 0 0 3rem
+
+  h3
+    font-size: 4.768rem
+    line-height: 4.768rem
+    margin: 0 0 2.8rem
+
+  h5
+    font-size: 3.052rem
+    line-height: 4.052rem
+
+@media #{$mq414}
+  button
+    width: 100%
+
+
+
 
 
 
@@ -84,6 +105,7 @@ p
 
 .shadow1
   box-shadow: $shadow1
+
 
 
 
